Fixed z-index on header and modal

--- a/app/stylesheets/base/_general.sass
+++ b/app/stylesheets/base/_general.sass
@@ -31,7 +31,10 @@ a
   //width: 100% !important
   position: relative
   margin: 0px
-
+  
+#zenbox_tab
+  z-index: 800 !important
+  
 ::-webkit-scrollbar
   width: 11px
   cursor: pointer
