--- a/app/stylesheets/layout/_header.sass
+++ b/app/stylesheets/layout/_header.sass
@@ -1,5 +1,5 @@
 #header 
-  z-index: 11000
+  z-index: 900
   position: fixed
   top: 0 
   left: 0 
@@ -14,7 +14,7 @@
       margin: 0px
   .header_right
     float: right
-    z-index: 11000
+    z-index: 900
 
 
   &.about 
