--- a/app/stylesheets/layout/_tour.sass
+++ b/app/stylesheets/layout/_tour.sass
@@ -4,19 +4,19 @@
   left: 0px
   bottom: 0px 
   right: 0px
-  z-index: 1000
+  z-index: 12000
 
 #tour
   position: fixed
   left: 0px
   top: 0px
-  margin-top: 65px
-  z-index: 1001
+  margin-top: 85px
+  z-index: 12001
 
 #current-tour-page, #next-tour-page
   display: none
   position: absolute
-  z-index: 2000
+  z-index: 12001
   //min-height: 530px !important
   overflow: visible !important
   height: auto !important
